--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger:
 
 variables:
   # Azure Resource Group
-  azureResourceGroup: rg-rsrincloud-ss
+  azureResourceGroup: BillTestResourceGroup
   # Azure Container Registry
   azureContainerRegistry: BillTestContainerRegistry
   # AKS Cluster Name
